--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <li><a href="#download-bootstrap"><i class="icon-chevron-right"></i>Biography</a></li>
           <li><a href="#file-structure"><i class="icon-chevron-right"></i>Research</a></li>
           <li><a href="#contents"><i class="icon-chevron-right"></i>Publications</a></li>
-          <li><a href="#html-template"><i class="icon-chevron-right"></i>Links</a></li>
+          <li><a href="#links"><i class="icon-chevron-right"></i>Links</a></li>
           <li><a href="#html-template"><i class="icon-chevron-right"></i>Contact</a></li>
         </ul>
       </div>
@@ -188,7 +188,7 @@
 
 
         <!-- Links ================================================== -->
-        <section id="html-template">
+        <section id="links">
           <div class="page-header">
             <h1>Links</h1>
           </div>
@@ -226,6 +226,11 @@
     <footer class="footer">
       <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
+        
+        <p class="copyright">Maintained by <a href="https://github.com/yongsen" target="_blank">yongsen</a></p>
+	<p>Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
+
+        <!--
         <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
         <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
         <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
@@ -236,6 +241,8 @@
           <li class="muted">&middot;</li>
           <li><a href="https://github.com/twitter/bootstrap/wiki">Roadmap and changelog</a></li>
         </ul>
+        
+        -->
       </div>
     </footer>
 
