--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My Sun</title>
+    <title>Yongsen Ma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -26,6 +26,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
   </head>
+
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
@@ -63,6 +64,7 @@
       </div>
     </div>
 -->
+
 <!-- Subhead
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
@@ -94,9 +96,10 @@
           <div class="page-header">
             <h1>Biography</h1>
           </div>
+          
           <p style="text-indent: 1em" >I am a graduate student in <a href="http://en.sjtu.edu.cn" target="_blank">Shanghai Jiao Tong University</a> supervised by Prof. Chengnian Long. I received my B.S. degree from the School of Control Science and Engineering, <a href="http://en.sdu.edu.cn" target="_blank">Shandong University</a> at 2010. </p>
 
-  		    <p style="text-indent: 1em" >I am working on my graduate research in the Smart Wireless System Group. My research interests are on wireless networking and mobile computing, including spectrum allocation and rate adaptation, energy-efficient algorithm and cross-layer protocol design, Linux kernel and wireless driver programming, mobile devices and applications.</p>
+ 	  <p style="text-indent: 1em" >I am working on my graduate research in the Smart Wireless System Group. My research interests are on wireless networking and mobile computing, including spectrum allocation and rate adaptation, energy-efficient algorithm and cross-layer protocol design, Linux kernel and wireless driver programming, mobile devices and applications.</p>
 
         </section>
 
@@ -270,6 +273,17 @@
 
     <!-- Analytics ================================================== -->
     <script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-39615354-1', 'github.com');
+  	ga('send', 'pageview');
+
+    </script>
+    <!--
+    <script>
       var _gauges = _gauges || [];
       (function() {
         var t   = document.createElement('script');
@@ -282,6 +296,7 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
+    -->
 
   </body>
 </html>
