--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <!-- Subhead
 ================================================== -->
-<header class="jumbotron subhead" id="overview">
+<header id="overview">
   <div class="container">
     <h1>Yongsen Ma</h1>
     <!-- <p class="lead">Time, Space, People and Event.</p> -->
@@ -81,18 +81,18 @@
     <div class="row">
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav">
-          <li><a href="#download-bootstrap"><i class="icon-chevron-right"></i>Biography</a></li>
-          <li><a href="#file-structure"><i class="icon-chevron-right"></i>Research</a></li>
-          <li><a href="#contents"><i class="icon-chevron-right"></i>Publications</a></li>
-          <li><a href="#links"><i class="icon-chevron-right"></i>Links</a></li>
-          <li><a href="#html-template"><i class="icon-chevron-right"></i>Contact</a></li>
+          <li><a href="#Biography"><i class="icon-chevron-right"></i>Biography</a></li>
+          <li><a href="#Research"><i class="icon-chevron-right"></i>Research</a></li>
+          <li><a href="#Publications"><i class="icon-chevron-right"></i>Publications</a></li>
+          <li><a href="#Links"><i class="icon-chevron-right"></i>Links</a></li>
+          <li><a href="#Contact"><i class="icon-chevron-right"></i>Contact</a></li>
         </ul>
       </div>
       <div class="span9">
 
 
         <!-- Biography ================================================== -->
-        <section id="download-bootstrap">
+        <section id="Biography">
           <div class="page-header">
             <h1>Biography</h1>
           </div>
@@ -105,7 +105,7 @@
 
 
         <!-- Research ================================================== -->
-        <section id="file-structure">
+        <section id="Research">
           <div class="page-header">
             <h1>Research</h1>
           </div>
@@ -121,7 +121,7 @@
 
 
 			<div style="display:block;margin:5px auto 0px;text-align:center">
-		  		<img border="0" height="200" src="images/modeling.jpg" /><img border="0" height="200" src="images/framework.jpg" />
+		  		<img border="0" height="200" src="img/modeling.jpg" /><img border="0" height="200" src="img/framework.jpg" />
 		  		<div><span>On-line Modeling Framework and Algorithm Implementation</span></div>
 				<div style="display:block;text-align:center"><br /></div>
 			</div>
@@ -139,7 +139,7 @@
 
 
 			<div style="display:block;margin:5px auto 0px;text-align:center">
-				<img border="0" height="150" src="images/online.jpg" /><img border="0" height="150" src="images/platform.jpg" /><img border="0" height="150" src="images/software.jpg" />
+				<img border="0" height="150" src="img/online.jpg" /><img border="0" height="150" src="img/platform.jpg" /><img border="0" height="150" src="img/software.jpg" />
 			<div><span>Estimation Framework and Monitoring System</span></div>
 			<div style="display:block;text-align:center"><br /></div>
 			</div>
@@ -159,7 +159,7 @@
 
 
         <!-- Publications ================================================== -->
-        <section id="contents">
+        <section id="Publications">
           <div class="page-header">
             <h1>Publications</h1>
           </div>
@@ -191,7 +191,7 @@
 
 
         <!-- Links ================================================== -->
-        <section id="links">
+        <section id="Links">
           <div class="page-header">
             <h1>Links</h1>
           </div>
@@ -199,23 +199,23 @@
          <p>The codes and documents can be found on the homepage listed below.</p>
 
   		<ul><ul><li>Graded 802.11n: &nbsp;<a href="http://yongsen.github.com/graded_802.11n" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/graded_802.11n" target="_blank">sourse code</a></li></ul></ul>
-			<ul><ul><li>Um Monitoring: &nbsp;<a href="http://yongsen.github.com/um_monitoring" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/um_monitoring" target="_blank">source code</a></li></ul></ul>
-			<ul><ul><li>NS2 Zigbee: &nbsp;<a href="http://yongsen.github.com/ns2_zigbee" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/ns2_zigbee" target="_blank">source code</a></li></ul></ul>
+		<ul><ul><li>Um Monitoring: &nbsp;<a href="http://yongsen.github.com/um_monitoring" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/um_monitoring" target="_blank">source code</a></li></ul></ul>
+		<ul><ul><li>NS2 Zigbee: &nbsp;<a href="http://yongsen.github.com/ns2_zigbee" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/ns2_zigbee" target="_blank">source code</a></li></ul></ul>
 			
         </section>
 
 
         <!-- Contact ================================================== -->
-        <section id="html-template">
+        <section id="Contact">
           <div class="page-header">
             <h1>Contact</h1>
           </div>
           
           <p>Room 2-211, SEIEE Buliding, Shanghai Jiao Tong University</p>
-  		    <p>NO. 800 Dongchuan RD., Minhang, Shanghai, 200240, China</p>
-			    <p>Lab: (+86) 021-3420-6656</p>
-			    <p>Mobile: (+86) 1880-190-0543</p>
-			    <p>Email: <a href="mayongsen@gmail.com">mayongsen@gmail.com</a></p>
+  	  <p>NO. 800 Dongchuan RD., Minhang, Shanghai, 200240, China</p>
+	  <p>Lab: (+86) 021-3420-6656</p>
+	  <p>Mobile: (+86) 1880-190-0543</p>
+	  <p>Email: <a href="mayongsen@gmail.com">mayongsen@gmail.com</a></p>
 
         </section>
 
@@ -231,7 +231,7 @@
         <p class="pull-right"><a href="#">Back to top</a></p>
         
         <p class="copyright">Maintained by <a href="https://github.com/yongsen" target="_blank">yongsen</a></p>
-	<p>Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
+	<p>Published with <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a></p>
 
         <!--
         <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
