--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <h1>Links</h1>
           </div>
           
-         <p>The codes and documents can be found on the homepage listed below.</p>
+         <p>The source codes and related documents can be found on the homepage listed below.</p>
 
   		<ul><ul><li>Graded 802.11n: &nbsp;<a href="http://yongsen.github.com/graded_802.11n" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/graded_802.11n" target="_blank">sourse code</a></li></ul></ul>
 		<ul><ul><li>Um Monitoring: &nbsp;<a href="http://yongsen.github.com/um_monitoring" target="_blank">home page</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yongsen/um_monitoring" target="_blank">source code</a></li></ul></ul>
