--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
 
 			<div style="display:block;margin:5px auto 0px;text-align:center">
-		  		<img border="0" height="100" src="img/modeling.jpg" /><img border="0" height="100" src="img/framework.jpg" />
-		  		<div><span>On-line Modeling Framework and Algorithm Implementation</span></div>
-				<div style="display:block;text-align:center"><br /></div>
+		  	<img border="0" height="100" src="img/modeling.jpg"/><img border="0" height="100" src="img/framework.jpg"/>
+		  	<div><span>On-line Modeling Framework and Algorithm Implementation</span></div>
+			<div style="display:block;text-align:center"><br /></div>
 			</div>
 
 
@@ -139,7 +139,8 @@
 
 
 			<div style="display:block;margin:5px auto 0px;text-align:center">
-				<img border="0" height="100" src="img/online.jpg" /><img border="0" height="100" src="img/platform.jpg" /><img border="0" height="100" src="img/software.jpg" />
+			<img border="0" height="100" src="img/online.jpg" />
+			<img border="0" height="100" src="img/platform.jpg" /><img border="0" height="100" src="img/software.jpg" />
 			<div><span>Estimation Framework and Monitoring System</span></div>
 			<div style="display:block;text-align:center"><br /></div>
 			</div>
