--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
   </head>
 
 
-  <body data-spy="scroll" data-target=".bs-docs-sidebar">
-
     <!-- Navbar ================================================== -->
     <!--
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -67,13 +65,15 @@
 
 <!-- Subhead
 ================================================== -->
-<header id="overview">
+<header class="jumbotron subhead" id="overview">
   <div class="container">
     <h1>Yongsen Ma</h1>
     <!-- <p class="lead">Time, Space, People and Event.</p> -->
   </div>
 </header>
 
+
+  <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
   <div class="container">
 
@@ -114,47 +114,47 @@
   		<p style="text-indent: 1em" >I am interested energy-efficient algorithm in MIMO-OFDM system currently. Some detailed information will be updated lately.</p>
 
 
-			<h3><b>Link quality measurement and modeling</b></h3>
-			<div>
-			<p style="text-indent: 1em" >My previous researches are mainly on the performance measurement and modeling issues. The related works are carried out in mobile 802.11n networks. Since WLANs (Wireless Local Area Networks) based on 802.11n have enjoyed tremendous growth due to the ever-increased demands of high-bandwidth applications. Moreover, with the increasing popularity of smartphones, the growth of mobile 802.11n is expected to continue unabated. However, the continued success of mobile 802.11n depends on their ability to efficiently configure different PHY/MAC enhancements. This is challenging in that multi-configuration in mobile 802.11n not only requires far more samples to acquire sufficient information for all possible channel settings, but also introduces significant complications in channel modeling. Furthermore, channels are more vulnerable to environmental variability and terminal mobility in mobile 802.11n. Therefore, accurate channel measurement and prediction is becoming increasingly important in mobile 802.11n networks.</p>
-			</div>
+		<h3><b>Link quality measurement and modeling of MIMO-OFDM networks</b></h3>
+		<div>
+		<p style="text-indent: 1em" >My previous researches are mainly on the performance measurement and modeling issues. The related works are carried out in mobile 802.11n networks. Since WLANs (Wireless Local Area Networks) based on 802.11n have enjoyed tremendous growth due to the ever-increased demands of high-bandwidth applications. Moreover, with the increasing popularity of smartphones, the growth of mobile 802.11n is expected to continue unabated. However, the continued success of mobile 802.11n depends on their ability to efficiently configure different PHY/MAC enhancements. This is challenging in that multi-configuration in mobile 802.11n not only requires far more samples to acquire sufficient information for all possible channel settings, but also introduces significant complications in channel modeling. Furthermore, channels are more vulnerable to environmental variability and terminal mobility in mobile 802.11n. Therefore, accurate channel measurement and prediction is becoming increasingly important in mobile 802.11n networks.</p>
+		</div>
 
 
-			<div style="display:block;margin:5px auto 0px;text-align:center">
-		  	<img border="0" height="100" src="img/modeling.jpg"/><img border="0" height="100" src="img/framework.jpg"/>
-		  	<div><span>On-line Modeling Framework and Algorithm Implementation</span></div>
-			<div style="display:block;text-align:center"><br /></div>
-			</div>
+		<div style="display:block;margin:5px auto 0px;text-align:center">
+		<img border="0" height="100" src="img/modeling.jpg"/><img border="0" height="100" src="img/framework.jpg"/>
+		<div><span>On-line Modeling Framework and Algorithm Implementation</span></div>
+		<div style="display:block;text-align:center"><br /></div>
+		</div>
 
 
-			<div>
-			<p style="text-indent: 1em" >We use an 802.11n compliant, programmable platform to study channel measurement and prediction in mobile 802.11n networks. The algorithm can be implemented on Linux systems with modified ath9k wireless driver, which is composed of both network layer and device layer components.. Our research shows that the existing PDR-RSS model can't capture the channel quality in 802.11n due to the static model and single measurement input. To this end, we propose a simple and effective online PDR-RSS modeling framework, a dynamic model that explicitly utilizes the real-time PDR and RSS jointly. The online framework derives a set of configurations with certain performance guaranteeing, which overcomes the channel quality capturing problem in static PDR-RSS models.</p>
-			</div>
+		<div>
+		<p style="text-indent: 1em" >We use an 802.11n compliant, programmable platform to study channel measurement and prediction in mobile 802.11n networks. The algorithm can be implemented on Linux systems with modified ath9k wireless driver, which is composed of both network layer and device layer components.. Our research shows that the existing PDR-RSS model can't capture the channel quality in 802.11n due to the static model and single measurement input. To this end, we propose a simple and effective online PDR-RSS modeling framework, a dynamic model that explicitly utilizes the real-time PDR and RSS jointly. The online framework derives a set of configurations with certain performance guaranteeing, which overcomes the channel quality capturing problem in static PDR-RSS models.</p>
+		</div>
 
 
-			<h3><b>Channel estimation</b></h3>
-			<div>
-			<p style="text-indent: 1em" >The high-speed railway has experienced rapid development in recent years, and it is a critical infrastructure transporting passengers, commodities, and goods. The primary consideration of high-speed railway infrastructure is safety, which has become increasingly dependent on the information and communication system. Since GSM-R networks are deployed for communications between train and railway regulation control centers in high-speed railway, it requires real-time measurement to ensure the reliability of the system. At the same time, it is necessary to make dynamic measurement due to the complexity of the radio propagation environments and the varied terrains along the high-speed railway route. It is crucial to lower the estimation overhead so that on-line measurement can be implemented to ensure the real-time reliability of GSM-R networks and the high-speed railway system.</p>
-			</div>
+		<h3><b>Channel estimation of mobile wireless networks</b></h3>
+		<div>
+		<p style="text-indent: 1em" >The high-speed railway has experienced rapid development in recent years, and it is a critical infrastructure transporting passengers, commodities, and goods. The primary consideration of high-speed railway infrastructure is safety, which has become increasingly dependent on the information and communication system. Since GSM-R networks are deployed for communications between train and railway regulation control centers in high-speed railway, it requires real-time measurement to ensure the reliability of the system. At the same time, it is necessary to make dynamic measurement due to the complexity of the radio propagation environments and the varied terrains along the high-speed railway route. It is crucial to lower the estimation overhead so that on-line measurement can be implemented to ensure the real-time reliability of GSM-R networks and the high-speed railway system.</p>
+		</div>
 
 
-			<div style="display:block;margin:5px auto 0px;text-align:center">
-			<img border="0" height="100" src="img/online.jpg" />
-			<img border="0" height="100" src="img/platform.jpg" /><img border="0" height="100" src="img/software.jpg" />
-			<div><span>Estimation Framework and Monitoring System</span></div>
-			<div style="display:block;text-align:center"><br /></div>
-			</div>
+		<div style="display:block;margin:5px auto 0px;text-align:center">
+		<img border="0" height="100" src="img/online.jpg" />
+		<img border="0" height="100" src="img/platform.jpg" /><img border="0" height="100" src="img/software.jpg" />
+		<div><span>Estimation Framework and Monitoring System</span></div>
+		<div style="display:block;text-align:center"><br /></div>
+		</div>
 
 
-			<div>
-			<p style="text-indent: 1em" >Since the cell radius is designed short and the terrains are generally flat in GSM-R networks, the multi-path fading channel should be modeled by Rician channel. Then we discussed the determination of proper length of statistical interval and required number of averaging samples, in which EM method is employed to reduce the estimating overhead and make the measurement adaptive to different propagation environments. To evaluate the performance of the algorithm, measurement experiment was implemented along the Beijing-Shanghai high-speed railway. The on-line and dynamic estimation algorithm can be not only used in coverage assessment with lower measurement overhead which is implemented in network planning, but also applied in real-time dynamic channel allocation, power control and adaptive handoff algorithms. Since Rician fading is the generalized model of multi-path fading channels, the algorithm can also be introduced into measurement of other networks.</p>
-			</div>
+		<div>
+		<p style="text-indent: 1em" >Since the cell radius is designed short and the terrains are generally flat in GSM-R networks, the multi-path fading channel should be modeled by Rician channel. Then we discussed the determination of proper length of statistical interval and required number of averaging samples, in which EM method is employed to reduce the estimating overhead and make the measurement adaptive to different propagation environments. To evaluate the performance of the algorithm, measurement experiment was implemented along the Beijing-Shanghai high-speed railway. The on-line and dynamic estimation algorithm can be not only used in coverage assessment with lower measurement overhead which is implemented in network planning, but also applied in real-time dynamic channel allocation, power control and adaptive handoff algorithms. Since Rician fading is the generalized model of multi-path fading channels, the algorithm can also be introduced into measurement of other networks.</p>
+		</div>
 
 
-			<h3><b>Performance analysis of Wireless Sensor Networks</b></h3>
-			<div>
-			<p style="text-indent: 1em" >My undergraduate thesis is on the performance analysis of Zigbee networks based on NS2. The documents can be found on my repository of <a href="http://yongsen.github.com/ns2_zigbee" target="_blank">ns_zigbee</a>.</p>
-			</div>
+		<h3><b>Performance analysis of Wireless Sensor Networks</b></h3>
+		<div>
+		<p style="text-indent: 1em" >My undergraduate thesis is on the performance analysis of Zigbee networks based on NS2. The documents can be found on my repository of <a href="http://yongsen.github.com/ns2_zigbee" target="_blank">ns_zigbee</a>.</p>
+		</div>
 
         </section>
 
