--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   </head>
 
+  <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
     <!-- Navbar ================================================== -->
     <!--
@@ -65,15 +66,13 @@
 
 <!-- Subhead
 ================================================== -->
-<header class="jumbotron subhead" id="overview">
+<header class="jumbotron head" id="overview">
   <div class="container">
     <h1>Yongsen Ma</h1>
     <!-- <p class="lead">Time, Space, People and Event.</p> -->
   </div>
 </header>
 
-
-  <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
   <div class="container">
 
