--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <!-- Subhead
 ================================================== -->
-<header class="jumbotron head" id="overview">
+<header class="jumbotron subhead" id="overview">
   <div class="container">
     <h1>Yongsen Ma</h1>
     <!-- <p class="lead">Time, Space, People and Event.</p> -->
