--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
           </div>
         
         <h3><b>Journals<hr /></b></h3>
-  		<ul><li><b>Yongsen Ma</b>, Jing Wu, Chengnian Long, and Bo Li. Accurate and fast rate adaption for mobile 802.11n networks. submitted to IEEE Transactions on Mobile Computing.[pdf]</li></ul>
+  		<ul><li><b>Yongsen Ma</b>, Jing Wu, Chengnian Long, and Bo Li. Accurate and fast rate adaption for mobile 802.11n networks. submitted to IEEE Transactions on Mobile Computing. March 2013.[pdf]</li></ul>
 
-			<ul><li><b>Yongsen Ma</b>, Xiaofeng Mao, Pengyuan Du, Chengnian Long, Bo Li, and Yueming Hu. Dynamic estimation of local mean power of Rician fading channels in GSM-R networks. acceptted by Springer Wireless Networks.[pdf]</li></ul>
+			<ul><li><b>Yongsen Ma</b>, Xiaofeng Mao, Pengyuan Du, Chengnian Long, Bo Li, and Yueming Hu. Dynamic estimation of local mean power of Rician fading channels in GSM-R networks. acceptted by ACM/Springer Wireless Networks. March 2013.[pdf]</li></ul>
 
 
    			<h3><b>Conferences<hr /></b></h3>
